2.18.2
 - fix: allow to select R binary when not found automatically
 - enh: enable lut selection for emodulus computation in bulk actions (#71)
 - enh: enable lut selection for emodulus computation (#71)
2.18.1
 - setup: bump dclab to 0.61.3 (replace rpy2 with wrapper) (#73 #161)
2.18.0
 - BREAKING CHANGE: set default viscosity model for Young's modulus
   computation to "buyukurganci-2022", because it is more accurate
   and also because it is defined for the "0.83% MC-PBS" medium
 - BREAKING CHANGE: remove support for machine learning extensions
   (.modc files), because they are not used
 - fix: remove leading/trailing slashes for DCOR servers
 - setup: bump dclab to 0.61.1 (fix basin-based array access, export from
   datasets with internal basins, other minor fixes)
2.17.0
 - setup: bump dclab to 0.60.0 (internal basin support, export logs)
2.16.5
 - setup: bump dclab to 0.59.1 (mapped-basin now fully supported)
2.16.4
 - setup: bump dclab to 0.59.0 (improved support for basin features)
2.16.3
 - maintenance release
2.16.2
 - fix: data export feature selection must default to features_loaded
 - enh: only show local features in QuickView Event Feature tab
 - enh: show dcnum pipeline identifiers in Analysis view
 - enh: add section:key tool tips for analysis view metadata
 - enh: added links to docs explaining default export selection
 - docs: remove Shape-Out 1 reference
 - setup: remove rpy2 from dependencies until #161 is fixed
 - setup: migrate from setup.py to pyproject.toml
 - setup: bump dclab to 0.58.7 (performance)
2.16.1
 - setup: bump dclab to 0.58.4 (reduced memory usage when computing
   contour-based features such as volume, export dataset configuration
   as metadata in .tsv export, support both posix and nt relative basin
   paths)
2.16.0
 - feat: enable storage strategy (basin control) in export dialog (#159)
 - fix: ask for .tsv output path before computing statistics
 - enh: color feature data in QuickView combobox according to availability